--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,1 +1,29 @@
-// Начните писать стили здесь
+@import "../../node_modules/normalize-scss/sass/normalize/import-now";
+@import "variables.scss";
+@import "global.scss";
+@import "blocks/visually-hidden.scss";
+@import "blocks/product-preview.scss";
+@import "blocks/programs.scss";
+@import "blocks/advantages.scss";
+@import "blocks/contacts.scss";
+@import "blocks/page-footer.scss";
+@import "blocks/product-catalog.scss";
+@import "blocks/social.scss";
+@import "blocks/copyright.scss";
+@import "blocks/main-nav.scss";
+@import "blocks/site-list.scss";
+@import "blocks/card-product.scss";
+@import "blocks/feature-table.scss";
+@import "blocks/show-more.scss";
+@import "blocks/example.scss";
+@import "blocks/extra-catalog.scss";
+@import "blocks/extra-card-product.scss";
+@import "blocks/table-price.scss";
+@import "blocks/order-page.scss";
+@import "blocks/order-form.scss";
+@import "blocks/field-group.scss";
+@import "blocks/extra-field-group.scss";
+@import "blocks/btn.scss";
+@import "blocks/bonus.scss";
+@import "blocks/cat-data.scss";
+@import "blocks/owner-contacts.scss";
