--- a/source/sass/blocks/extra-catalog.scss
+++ b/source/sass/blocks/extra-catalog.scss
@@ -34,6 +34,8 @@
 @media (min-width: $tablet-width) {
   .extra-catalog__title {
     border-bottom: none;
+    font-size: 36px;
+    line-height: 36px;
   }
 }
 
