--- a/source/sass/blocks/example.scss
+++ b/source/sass/blocks/example.scss
@@ -61,7 +61,14 @@
   color: $black;
   font-size: 36px;
   font-weight: 400;
-  line-height: 60px;
+  line-height: 40px;
+}
+
+@media (min-width: $tablet-width) {
+  .example__title {
+    font-size: 60px;
+    line-height: 60px;
+  }
 }
 
 .example__description {
@@ -73,6 +80,13 @@
   font-size: 14px;
   line-height: 18px;
   text-align: left;
+}
+
+@media (min-width: $tablet-width) {
+  .example__description {
+    font-size: 16px;
+    line-height: 24px;
+  }
 }
 
 @media (min-width: $tablet-width) {
@@ -127,12 +141,26 @@
   border-radius: 3px;
 }
 
+@media (min-width: $tablet-width) {
+  .example__term {
+    font-size: 30px;
+    line-height: 37px;
+  }
+}
+
 .example__definition {
   font-family: $font-arial;
   color: $dark-grey;
   font-size: 12px;
   line-height: 12px;
   text-transform: lowercase;
+}
+
+@media (min-width: $tablet-width) {
+  .example__definition {
+    font-size: 14px;
+    line-height: 14px;
+  }
 }
 
 .example__spent-money {
@@ -152,6 +180,7 @@
     width: 130px;
     margin: 0;
     text-align: right;
+    font-size: 20px;
   }
 }
 
@@ -265,6 +294,7 @@
   .example__before-text,
   .example__after-text {
     font-size: 20px;
+    line-height: 30px;
     padding-bottom: 6px;
     border-bottom: 1px dotted #bebebe;
 
