--- a/source/sass/blocks/extra-card-product.scss
+++ b/source/sass/blocks/extra-card-product.scss
@@ -5,7 +5,7 @@
   padding-top: 14px;
   padding-bottom: 17px;
   min-height: 97px;
-  border-bottom: 1px solid #ededed;
+  border-bottom: 1px solid $extra-border-grey;
 }
 
 @media (min-width: $tablet-width) {
@@ -16,7 +16,7 @@
     padding-bottom: 28px;
     padding-left: 38px;
     min-height: 82px;
-    border: 1px solid #ededed;
+    border: 1px solid $extra-border-grey;
   }
 }
 
@@ -31,10 +31,10 @@
     padding-left: 0;
     min-height: 40px;
     border: none;
-    border-top: 1px solid #ededed;
+    border-top: 1px solid $extra-border-grey;
 
     &:last-child {
-      border-bottom: 1px solid #ededed;
+      border-bottom: 1px solid $extra-border-grey;
     }
   }
 }
@@ -67,6 +67,8 @@
 @media (min-width: $tablet-width) {
   .extra-card-product__title {
     margin: 0;
+    font-size: 20px;
+    line-height: 20px;
   }
 }
 
