--- a/source/sass/blocks/field-group.scss
+++ b/source/sass/blocks/field-group.scss
@@ -20,7 +20,7 @@
   color: $black;
   font-size: 24px;
   font-weight: 400;
-  line-height: 24px;
+  line-height: 26px;
 
   &--width {
     width: 225px;
@@ -64,7 +64,7 @@
   padding-right: 20px;
   padding-left: 20px;
   font-family: $font-oswald;
-  color: $grey-black;
+  color: $dark-grey;
   font-size: 16px;
   font-weight: 400;
   line-height: 18px;
@@ -72,6 +72,7 @@
 
   &--radio {
     margin-bottom: 13px;
+    color: $grey-black;
   }
 
   &--last-input {
@@ -85,7 +86,7 @@
     padding-right: 67px;
     padding-left: 71px;
     font-size: 20px;
-    line-height: 20px;
+    line-height: 30px;
 
     &--radio {
       margin-bottom: 13px;
@@ -130,20 +131,20 @@
   color: $dark-grey;
   font-size: 16px;
   font-weight: 400;
-  line-height: 16px;
+  line-height: 18px;
   text-transform: uppercase;
-  border: 1px solid #e6e6e6;
+  border: 1px solid $input-grey;
 
   &:hover {
-    border: 1px solid #cdcdcd;
+    border: 1px solid $extra-border-grey;
   }
 
   &:focus {
-    border: 2px solid #444444;
+    border: 2px solid $dark-grey;
   }
 
   &:invalid {
-    border: 2px solid #ff8282;
+    border: 2px solid $invalid;
   }
 }
 
@@ -156,7 +157,7 @@
     padding-left: 20px;
     height: 20px;
     font-size: 20px;
-    line-height: 20px;
+    line-height: 30px;
   }
 }
 
