--- a/source/sass/blocks/order-form.scss
+++ b/source/sass/blocks/order-form.scss
@@ -84,7 +84,7 @@
   display: block;
   margin-top: 23px;
   font-family: $font-arial;
-  color: $dark-grey;
+  color: $black;
   font-size: 14px;
   line-height: 16px;
   text-align: center;
