--- a/source/sass/blocks/table-price.scss
+++ b/source/sass/blocks/table-price.scss
@@ -22,6 +22,9 @@
 
 @media (min-width: $tablet-width) {
   .table-price__row td {
+    font-size: 16px;
+    line-height: 20px;
+
     &:first-child {
       width: auto;
       text-align: right;
