--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -9,5 +9,9 @@ $light-grey: #f2f2f2;
 $dark-grey: #444444;
 $grey: #666666;
 $grey-black: #222222;
+$input-grey: #e7e7e7;
+$border-grey: #ebebeb;
+$extra-border-grey: #cdcdcd;
+$invalid: #ff8282;
 $tablet-width: 768px;
 $desktop-width: 1440px;
