--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -27,3 +27,4 @@
 @import "blocks/bonus.scss";
 @import "blocks/cat-data.scss";
 @import "blocks/owner-contacts.scss";
+@import "blocks/container.scss";
