--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -1,22 +1,18 @@
 .contacts {
-  min-height: 400px;
+  position: relative;
 }
 
 .contacts__wrapper {
   position: absolute;
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
   width: 100%;
-  margin-top: -114px;
-  padding-top: 30px;
-  padding-right: 20px;
-  padding-bottom: 25px;
-  padding-left: 20px;
-  min-height: 60px;
-  box-sizing: border-box;
-  background-color: $white;
-  z-index: 1;
+  margin-top: -76px;
+  padding-top: 27px;
+  padding-bottom: 22px;
+  min-height: 64px;
+  background-color: $white;;
 
   &--grey-back {
     background-color: $light-grey;
@@ -26,11 +22,9 @@
 @media (min-width: $tablet-width) {
   .contacts__wrapper {
     margin-top: -200px;
-    padding-top: 65px;
-    padding-right: 70px;
-    padding-bottom: 60px;
-    padding-left: 70px;
-    min-height: 70px;
+    padding-top: 62px;
+    padding-bottom: 51px;
+    min-height: 84px;
   }
 }
 
@@ -40,8 +34,9 @@
     margin-right: auto;
     margin-left: 110px;
     padding-right: 90px;
-    width: 570px;
-    min-height: 75px;
+    padding-left: 75px;
+    width: 405px;
+    min-height: 88px;
 
     &--grey-back {
       background-color: $white;
@@ -50,8 +45,9 @@
 }
 
 .contacts__invite {
-  min-width: 125px;
-  margin-right: 15px;
+  width: 140px;
+  margin: 0;
+  margin-left: 19px;
   font-family: $font-oswald;
   font-size: 16px;
   font-weight: 400;
@@ -62,18 +58,23 @@
 
 @media (min-width: $tablet-width) {
   .contacts__invite {
-    margin-right: 330px;
+    width: 172px;
+    margin-left: 71px;
     font-size: 20px;
+    line-height: 25px;
   }
 }
 
 @media (min-width: $desktop-width) {
   .contacts__invite {
-    margin-right: 95px;
+    margin: 0;
   }
 }
 
 .contacts__detailed {
+  width: 140px;
+  margin: 0;
+  margin-right: 19px;
   font-family: $font-arial;
   font-size: 14px;
   color: $dark-grey;
@@ -82,14 +83,27 @@
 
 @media (min-width: $tablet-width) {
   .contacts__detailed {
+    width: 160px;
+    margin-right: 71px;
     text-align: right;
     font-size: 16px;
+
+    span {
+      display: block;
+      margin-top: 10px;
+    }
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .contacts__detailed {
+    margin-right: 0;
   }
 }
 
 .contacts__on-map {
   display: block;
-  margin-top: 114px;
+  margin-top: 76px;
   margin-right: auto;
   margin-left: auto;
 }
