--- a/source/sass/blocks/site-list.scss
+++ b/source/sass/blocks/site-list.scss
@@ -8,6 +8,7 @@
   }
 }
 
+
 .site-list__item {
   margin: 0;
   font-family: $font-oswald;
@@ -23,7 +24,6 @@
 @media (min-width: $tablet-width) {
   .site-list__item {
     font-size: 18px;
-    color: $grey-black;
     font-weight: 400;
     line-height: 24px;
     border-bottom: none;
@@ -33,7 +33,6 @@
 @media (min-width: $desktop-width) {
   .site-list__item {
     font-size: 20px;
-    color: $white;
     line-height: 30px;
   }
 }
@@ -56,6 +55,7 @@
   .site-list__link-to-page {
     margin-left: 36px;
     padding: 0;
+    padding-bottom: 10px;
 
     &--active {
       border-bottom: 2px solid $light-green;
@@ -64,12 +64,8 @@
 }
 
 @media (min-width: $desktop-width) {
-  .site-list__link-to-page {
+  .site-list__link-to-page--index {
     color: $white;
-
-    &--active {
-      border-bottom: 2px solid $white;
-    }
 
     &:hover {
       color: rgba(255, 255, 255, 0.6);
@@ -78,5 +74,11 @@
     &:active {
       color: rgba(255, 255, 255, 0.3);
     }
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .site-list__link-to-page--index.site-list__link-to-page--active {
+    border-bottom: 2px solid $white;
   }
 }
