--- a/source/sass/blocks/social.scss
+++ b/source/sass/blocks/social.scss
@@ -17,3 +17,22 @@
     opacity: 0.3;
   }
 }
+
+@media (min-width: $tablet-width) {
+  .social__link {
+    &--vk svg {
+      width: 30px;
+      height: 22px;
+    }
+
+    &--instagram svg {
+      width: 23px;
+      height: 23px;
+    }
+
+    &--facebook svg {
+      width: 13px;
+      height: 27px;
+    }
+  }
+}
